# machine-config

./: .gitignore  .shellcheckrc  .shfmtrc  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md
.github/workflows/: shellcheck.yml  test-tui.yml
archive/7z/base/: README.md
archive/compression/pigz/base/: README.md
archive/compression/zstd/base/: README.md
archive/unar/base/: README.md
backup/restic/base/: README.md
containers/docker/base/: config.json
containers/kubernetes/base/: README.md  config.yaml
containers/lazydocker/base/: README.md  config.yml
containers/version-managers/base/: .tool-versions
data-processing/jq/base/: README.md
data-processing/yq/base/: README.md
database/mycli/base/: README.md  config
database/pgcli/base/: README.md  config
development/python/base/: pyproject.toml
development/rust/base/: config.toml
development/tokei/base/: README.md
editors/emacs/base/: README.md  init.el
editors/helix/base/: README.md  config.toml
editors/neovim/base/: README.md  init.lua
editors/neovim/base/lua/config/: autocmds.lua  keymaps.lua  lsp.lua  options.lua  plugins.lua
monitoring/btop/base/: btop.conf
monitoring/btop/base/themes/: Dracula.theme
monitoring/gdu/base/: README.md
monitoring/glances/base/: README.md  glances.conf
navigation/fd/base/: fdignore
navigation/fzf/base/: fzf.bash
navigation/ripgrep/base/: rg.conf
navigation/yazi/base/: README.md  yazi.toml
notes/obsidian/base/: README.md
productivity/httpie/base/: README.md  config.json
productivity/navi/base/: README.md  config.yaml
productivity/thefuck/base/: README.md  config.toml
productivity/tldr/base/: README.md
scripts/: install.sh  lint.sh
scripts/install/: README.md  install-category.sh  install.py  install.sh  install_tui.py  packages.sh
scripts/utils/: common.sh  detect-env.sh  detect-os.sh  install-ghostty-terminfo.sh
security/ssh/base/: config
shells/atuin/base/: README.md  config.toml
shells/direnv/base/: README.md  direnvrc
shells/fish/base/: config.fish
shells/nushell/base/: env.nu
shells/zoxide/base/: README.md  config.cmd
shells/zsh/base/: .zshrc  starship.toml
terminals/ghostty/base/: README.md  config
terminals/screen/base/: .screenrc  README.md
terminals/tmux/base/: .tmux.conf
terminals/wezterm/base/: README.md  wezterm.lua
terminals/zellij/: README.md
terminals/zellij/base/: config.kdl
terminals/zellij/os/macos/: config.kdl
terminals/zellij/os/windows/: config.kdl
tests/: test_tui.py
transfer/rclone/base/: README.md
version-control/gh/base/: README.md  config.yml
version-control/git/base/: .gitconfig  ignore
version-control/lazygit/base/: config.yml
